--- a/templates/userlist.html
+++ b/templates/userlist.html
@@ -13,6 +13,7 @@ voit:
 </ul>
 <p>
 <p>
+<!---------------------------------------------------------->
 <form action="/settings/admin/userlist" method="POST">
 <p>
 <b>1. valitse toiminto:</b>
@@ -69,4 +70,6 @@ voit:
 </form>
 <hr>
 <p>
+<!---------------------------------------------------------->
+{% endif %}
 {% endblock %}
