Improve checks name and password

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -12,7 +12,7 @@ Yhteystietosi adminille: {% if user_info[2] %} {{ user_info[2] }} {% endif %}<br
 <hr>
 <b>Vaihda kalenterissa näkyvä nimesi*</b> <br>
 Anna uusi nimi:<br>
-<input type="text" name="name" minlength="2" maxlength="30">
+<input type="text" name="name" minlength="2" maxlength="35">
 <br>*Huom! tunnuksesi ei muutu, vain kalenterissa näkyvä nimesi muuttuu.<br>
 Nimesi päivittyy kaikkialle seuraavassa sisäänkirjautumisessa.
 <br>
@@ -194,7 +194,7 @@ Ryhmän kuvaus: <br><textarea name ="group_description" rows="3" cols="50" maxle
 <b>Salasanan vaihto:</b><br>
 Huom! muuta takaisin ryhmän salasanaksi tsoha jos kokeilet.. :)
 <p>
-Oma kirjautumissalasanasi:<br><input type="password" name="old_password">
+Oma kirjautumissalasanasi:<br><input type="password" name="own_password">
 <p>
 Uusi ryhmän salasana:<br><input type="password" name="new_password1">
 <p>
