--- a/templates/new_group.html
+++ b/templates/new_group.html
@@ -23,8 +23,8 @@ Ryhmään liittymissalasana: <br><input type="password" name="password_newgroup1
 <p>
 Ryhmään liittymissalasana uudestaan: <br><input type="password" name="password_newgroup2">
 <p>
-<input type="submit" value="Lähetä rekisteröinti ja tallenna uusi ryhmä">
+<input class="button" type="submit" value="Lähetä rekisteröinti ja tallenna uusi ryhmä">
 <input type="hidden" name="group_reg" value="new_group">
 </form>   
-
+<!----------------------------------------------------->
 {% endblock %}
