--- a/templates/register.html
+++ b/templates/register.html
@@ -13,12 +13,11 @@ Salasana: <br><input type="password" name="password1">
 <p>
 Salasana uudestaan: <br><input type="password" name="password2">
 <p>
-<h3>Ryhmän nimi: {{group_info.name}} </h3>
+<!--<h3>Ryhmän nimi: {{group_info.name}} </h3>-->
 <p>
 Liittymissalasana: <br><input type="password" name="password_group">
 <p>
-(saat liittymissalasanan ryhmän jäseneltä tai ryhmän adminilta, <br>
-ryhmän tsoha salasana on tsoha)
+(saat liittymissalasanan ryhmän jäseneltä tai ryhmän adminilta)
 <p>
 <b>Valitse kaikki tapahtumat, joihin mahdollisesti saatat osallistua:<br>
 </b>(oletuksena on valittu kaikki)
