changes for piloting, hide the field of the contact_info

--- a/templates/settings.html
+++ b/templates/settings.html
@@ -23,7 +23,7 @@ Anna uusi nimi:<br>
 <p>
 <hr>
 <!--U------------------------------------------------------------------>
-<form action="/settings/change_contact_info" method="POST">
+<!--<form action="/settings/change_contact_info" method="POST">
 <b>Anna yhteystietosi:</b>*<br>
 <input type="text" name="contact_info" maxlength="100"><br>
 *vain adminin/adminien tietoon<br>
